chandeliers-lus/tests/compile_fail/ui/tc/poly/unused-ext.rs
chandeliers_lus::decl! {
    #[generic[T]]
    extern node id(t0: int) returns (t1: int);
}

fn main() {}
