chandeliers-lus/tests/compile_fail/ui/tc/poly/unused-ext.stderr
error: Type variable T cannot be inferred from the inputs of this node
 --> tests/compile_fail/ui/tc/poly/unused-ext.rs:2:15
  |
2 |     #[generic[T]]
  |               ^
  |
note: None of these arguments are of type T
 --> tests/compile_fail/ui/tc/poly/unused-ext.rs:3:20
  |
3 |     extern node id(t0: int) returns (t1: int);
  |                    ^^^^^^^^
